@@ -1,7 +1,7 @@
 module Padrino
   module Cache
     module Helpers
-      module CacheStore
+      module CacheStore #:nodoc:
         def expire(*key)
           if key.size == 1 and key.first.is_a?(String)
             self.class.cache_store.delete(key)
