@@ -1,12 +1,46 @@
 module Padrino
   module Cache
     module Helpers
+      ##
+      # Page caching is very easy to integrate into your application. To turn it on, simply provide the
+      # <tt>:cache => true</tt> option on either a controller or one of its routes.
+      # By default, cached content is persisted with a "file store"--that is, in a
+      # subdirectory of your application root.
+      #
+      # ==== Examples
+      #   # Setting content expiry time
+      #   class CachedApp < Padrino::Application
+      #     register Padrino::Cache  # includes helpers
+      #     enable :caching          # turns on caching mechanism
+      #
+      #     controller '/blog', :cache => true do
+      #       expires_in 15
+      #
+      #       get '/entries' do
+      #         'just broke up eating twinkies lol'
+      #       end
+      #     end
+      #   end
+      #
+      # Note that the "latest" method call to <tt>expires_in</tt> determines its value: if
+      # called within a route, as opposed to a controller definition, the route's
+      # value will be assumed.
+      #
       module Page
+        ##
+        # This helper is used within a controller or route to indicate how often content
+        # should persist in the cache.
+        #
+        # After <tt>seconds</tt> seconds have passed, content previously cached will
+        # be discarded and re-rendered. Code associated with that route will <em>not</em>
+        # be executed; rather, its previous output will be sent to the client with a
+        # 200 OK status code.
+        #
         def expires_in(time)
           @_last_expires_in = time
         end
 
-        def self.padrino_route_added(route, verb, path, args, options, block)
+        def self.padrino_route_added(route, verb, path, args, options, block) #:nodoc:
           if route.cache and %w(GET HEAD).include?(verb)
             route.add_before_filter(Proc.new {
               if self.class.caching?
