@@ -1,9 +1,15 @@
 module Padrino
   module Cache
     module Store
+      ##
+      # Memory Cache Store
+      #
       class Memory
+        ##
         # Initialize Memory Store with memory size
-        # Padrino::Cache::Store::Memory.new 10000
+        #
+        # ==== Examples
+        #   Padrino::Cache::Store::Memory.new(10000)
         #
         def initialize(size = 5000)
           @size, @entries, @index = size, [], {}
